--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "express-typescript",
     "version": "1.0.0",
-    "description": "basic node.js project to practice node events",
+    "description": "basic node.js project to practice node with typescript",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
